fix bullet point spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,6 +20,7 @@ p {
   margin-bottom: 1.25rem;
   list-style-type: disc;
   line-height: 1.625;
+  padding-left: 1.125rem;
 }
 
 .blog-post { 
